chore : (#15) 필요없는 api 삭제
