# src/auth/auth.controller.ts
@@ -1,5 +1,4 @@
-import { Body, Controller, Get, Post, Req, UseGuards } from '@nestjs/common';
-import { AuthGuard } from '@nestjs/passport';
+import { Body, Controller, Post } from '@nestjs/common';
 import { AuthService } from './auth.service';
 import { GoogleCodeLoginDto } from './dto/google-code-login.dto';
 
@@ -10,17 +9,5 @@ export class AuthController {
   @Post('google/code')
   loginWithGoogleCode(@Body() body: GoogleCodeLoginDto) {
     return this.authService.loginWithGoogleCode(body);
-  }
-
-  @Get('google')
-  @UseGuards(AuthGuard('google'))
-  googleLogin() {
-    return;
-  }
-
-  @Get('google/callback')
-  @UseGuards(AuthGuard('google'))
-  async googleCallback(@Req() req: any) {
-    return this.authService.loginOAuth(req.user);
   }
 }
